--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^3.8.1
   cloud_firestore: ^5.5.1
   provider: ^6.1.2
+  video_player: ^2.9.2
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
