--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   provider: ^6.1.2
   video_player: ^2.9.2
   photo_view: ^0.15.0
+  geolocator: ^13.0.2
+  flutter_map_location_marker: ^9.1.1
 
 dev_dependencies:
   flutter_test:
