--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   photo_view: ^0.15.0
   geolocator: ^13.0.2
   flutter_map_location_marker: ^9.1.1
+  modal_bottom_sheet: ^3.0.0
 
 dev_dependencies:
   flutter_test:
